--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Simple Calculator</title>
+  <title>Simple Calculator Ivan Change</title>
   <style>
     body {
       display: flex;
