--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>IVANN PINAKA GWAPO SA COR JESU</title>
+  <title>IVANN PINAKA most GWAPO SA COR JESU</title>
   <style>
     body {
       display: flex;
